--- a/index.html
+++ b/index.html
@@ -73,11 +73,13 @@
             cursor: pointer;
             outline: none;
             transition: background-color 0.3s ease;
+            -webkit-tap-highlight-color: transparent;
         }
 
         .click-button:active {
             background-color: #45a049;
             transform: scale(0.95);
+            -webkit-tap-highlight-color: transparent;
         }
     </style>
 </head>
