--- a/index.html
+++ b/index.html
@@ -2,169 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zikr Clicker</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            background-color: #f0f0f0;
-            flex-direction: column;
-        }
-
-        .ranking {
-            position: absolute;
-            top: 10px;
-            left: 50%;
-            transform: translateX(-50%);
-            width: 300px;
-            background-color: white;
-            border: 1px solid #ddd;
-            border-radius: 10px;
-            padding: 10px;
-            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-        }
-
-        .ranking h2 {
-            margin-top: 0;
-            font-size: 1.5rem;
-            color: #333;
-            text-align: center;
-        }
-
-        .ranking ul {
-            list-style-type: none;
-            padding: 0;
-            margin: 0;
-        }
-
-        .ranking li {
-            padding: 5px 0;
-            border-bottom: 1px solid #ddd;
-        }
-
-        .ranking li:last-child {
-            border-bottom: none;
-        }
-
-        .container {
-            text-align: center;
-            margin-top: 200px; /* Добавлено для смещения ниже */
-        }
-
-        .counter {
-            font-size: 2rem;
-            margin-bottom: 20px;
-            color: #333;
-        }
-
-        .click-button {
-            width: 200px;
-            height: 200px;
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            border-radius: 50%;
-            font-size: 1.5rem;
-            cursor: pointer;
-            outline: none;
-            transition: background-color 0.3s ease;
-            -webkit-tap-highlight-color: transparent;
-        }
-
-        .click-button:active {
-            background-color: #45a049;
-            transform: scale(0.95);
-            -webkit-tap-highlight-color: transparent;
-        }
-    </style>
+    <title>Welcome</title>
 </head>
 <body>
-<div class="ranking">
-    <h2>Top Players</h2>
-    <ul id="ranking-list">
-        <!-- Рейтинг игроков будет добавлен сюда -->
-    </ul>
-</div>
-
-<div class="container">
-    <div class="counter" id="counter">Clicks: 0</div>
-    <button class="click-button" id="clickButton">Click Me!</button>
-</div>
-
-<script>
-    let counter = parseInt(localStorage.getItem('counter')) || 0; // Загрузка значения счётчика из Local Storage
-    const counterDisplay = document.getElementById('counter');
-    const clickButton = document.getElementById('clickButton');
-
-    // Обновление отображения счётчика
-    function updateCounterDisplay() {
-        counterDisplay.textContent = `Clicks: ${counter}`;
-    }
-
-    clickButton.addEventListener('click', () => {
-        counter++;
-        localStorage.setItem('counter', counter); // Сохранение значения счётчика в Local Storage
-        updateCounterDisplay();
-
-        // Отправка счёта на сервер
-        fetch('/api/updateScore', {
-            method: 'POST',
-            headers: {
-                'Content-Type': 'application/json'
-            },
-            body: JSON.stringify({
-                username: 'Улан',  // Здесь можно использовать реальное имя пользователя
-                score: counter
-            })
-        })
-            .then(response => response.text())
-            .then(data => {
-                console.log('Score updated:', data);
-            })
-            .catch(error => {
-                console.error('Error updating score:', error);
-            });
-    });
-
-    async function fetchRanking() {
-        try {
-            const response = await fetch('/api/ranking');
-            if (!response.ok) {
-                throw new Error('Network response was not ok');
-            }
-            const rankingData = await response.json();
-            console.log('Fetched ranking data:', rankingData); //
-            updateRanking(rankingData);
-        } catch (error) {
-            console.error('Error fetching ranking data:', error);
-        }
-    }
-
-    function updateRanking(rankingData) {
-        const rankingList = document.getElementById('ranking-list');
-        rankingList.innerHTML = '';
-
-        if (rankingData.length === 0) {
-            rankingList.innerHTML = '<li>No players found</li>';
-        }
-
-        rankingData.forEach(player => {
-            const listItem = document.createElement('li');
-            listItem.innerText = `${player.username}: ${player.score}`;
-            rankingList.appendChild(listItem);
-        });
-    }
-
-    document.addEventListener('DOMContentLoaded', () => {
-        updateCounterDisplay(); // Отображение сохранённого значения счётчика при загрузке страницы
-        fetchRanking();
-        setInterval(fetchRanking, 60000); // Обновлять рейтинг каждую минуту
-    });
-</script>
+<h1>Добро пожаловать, <span th:text="${username}">User</span>!</h1>
 </body>
 </html>
