--- a/index.html
+++ b/index.html
@@ -3,9 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <title>Welcome</title>
+    <style>
+        body {
+            background-color: #f0f8ff; /* Светло-голубой фон */
+            font-family: Arial, sans-serif;
+            color: #333;
+        }
+        h1, h2 {
+            text-align: center;
+            margin-top: 5%;
+        }
+    </style>
+    <script>
+        window.onload = function() {
+            const urlParams = new URLSearchParams(window.location.search);
+            const username = urlParams.get('username') || 'User';
+            const chatId = urlParams.get('chatId') || '0';
+            document.getElementById('welcome-message').textContent = `Добро пожаловать, ${username}!`;
+            document.getElementById('account-balance').textContent = `На вашем счету ${chatId}!`;
+        };
+    </script>
 </head>
 <body>
-<h1>Добро пожаловать, <span th:text="${username}">User</span>!</h1>
-<h2>На вашем счету <span th:text="${chatId}">0</span>!</h2>
+    <h1 id="welcome-message">Добро пожаловать, User!</h1>
+    <h2 id="account-balance">На вашем счету 0!</h2>
 </body>
 </html>
