--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Welcome</title>
     <style>
         body {
@@ -50,7 +51,7 @@
                 padding: 20px; /* Увеличиваем отступы для кнопок */
                 font-size: 20px; /* Увеличиваем размер шрифта кнопок */
                 margin: 10px; /* Увеличиваем отступы между кнопками */
-                height: 60px; /* Увеличиваем высоту кнопок на мобильных устройствах */
+                height: 30%; /* Увеличиваем высоту кнопок на мобильных устройствах */
                 line-height: 60px; /* Центрируем текст по вертикали */
             }
         }
