--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 padding: 20px; /* Увеличиваем отступы для кнопок */
                 font-size: 20px; /* Увеличиваем размер шрифта кнопок */
                 margin: 10px; /* Увеличиваем отступы между кнопками */
-                height: 20%; /* Увеличиваем высоту кнопок на мобильных устройствах */
+                height: 100px; /* Увеличиваем высоту кнопок на мобильных устройствах */
                 line-height: 60px; /* Центрируем текст по вертикали */
             }
         }
