--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Welcome</title>
     <style>
         body {
@@ -20,7 +19,7 @@
             position: fixed;
             bottom: 0;
             width: 100%;
-            background-color: #f0f8ff;
+            background-color: #fff;
             padding: 10px;
             box-sizing: border-box; /* Учитывать padding в ширине */
             border-top: 1px solid #ddd;
@@ -33,8 +32,8 @@
             font-size: 16px;
             margin: 5px;
             text-decoration: none;
-            color: #fff;
-            background-color: #007bff;
+            color: black;
+            background-color: #fff;
             border-radius: 75px;
             text-align: center;
             transition: background-color 0.3s ease;
@@ -43,14 +42,14 @@
             line-height: 50px; /* Центрирование текста по вертикали */
         }
         .button-container a:hover {
-            background-color: black;
+            background-color: #fff;
         }
         /* Мобильное отображение */
-         @media (max-width: 600px) {
+        @media (max-width: 600px) {
             .button-container a {
                 padding: 20px; /* Увеличиваем отступы для кнопок */
-                font-size: 18px; /* Увеличиваем размер шрифта кнопок */
-                margin: 8px; /* Увеличиваем отступы между кнопками */
+                font-size: 20px; /* Увеличиваем размер шрифта кнопок */
+                margin: 10px; /* Увеличиваем отступы между кнопками */
                 height: 60px; /* Увеличиваем высоту кнопок на мобильных устройствах */
                 line-height: 60px; /* Центрируем текст по вертикали */
             }
@@ -62,8 +61,8 @@
             const username = urlParams.get('username') || 'User';
             const chatId = urlParams.get('chatId') || '0';
             const balance = Math.floor((parseInt(chatId) || 0) / 1111);
-            document.getElementById('welcome-message').textContent = `Добро пожаловать, ${username}!`;
-            document.getElementById('account-balance').textContent = `На вашем счету ${balance}`;
+            document.getElementById('welcome-message').textContent = `Hey, ${username}!`;
+            document.getElementById('account-balance').textContent = `Your balance : ${balance}` ;
         };
     </script>
 </head>
@@ -71,7 +70,7 @@
 <h1 id="welcome-message">Добро пожаловать, User!</h1>
 <h2 id="account-balance">На вашем счету 0!</h2>
 <div class="button-container">
-    <a href="/home">Home</a>
+    <a href="/">Home</a>
     <a href="/leaderboard">Leaderboard</a>
     <a href="/friends">Friends</a>
 </div>
