--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Welcome</title>
+    <title>Welcome to Hunky-Dory</title>
     <style>
         body {
             background-color: #f0f8ff; /* Светло-голубой фон */
