--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
 <h1 id="welcome-message">Добро пожаловать, User!</h1>
 <h2 id="account-balance">На вашем счету 0!</h2>
 <div class="button-container">
-    <a href="/">Home</a>
-    <a href="/leaderboard">Leaderboard</a>
-    <a href="/friends">Friends</a>
+    <a href="/"><i class="fas fa-home"></i> Home</a>
+    <a href="/tasks"><i class="fas fa-tasks"></i> Tasks</a>
+    <a href="/wallet"><i class="fas fa-wallet"></i> Wallet</a>
 </div>
 </body>
 </html>
