--- a/index.html
+++ b/index.html
@@ -1,69 +1,79 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Welcome to Hunky-Dory</title>
     <style>
         body {
-            background-color: #f0f8ff; /* Светло-голубой фон */
-            font-family: Arial, sans-serif;
+            background-color: #0088cc; /* Слегка голубой фон */
+            font-family: 'Roboto', sans-serif;
             color: #333;
             margin: 0;
             padding: 0;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
         }
         h1, h2 {
             text-align: center;
             margin-top: 5%;
+            color: #ffffff; /* Тёмно-зелёный текст */
         }
         .button-container {
-            position: fixed;
-            bottom: 0;
+            margin-top: auto;
             width: 100%;
-            background-color: #fff;
-            padding: 10px;
-            box-sizing: border-box; /* Учитывать padding в ширине */
-            border-top: 1px solid #ddd;
+            background-color: #ffffff; /* Глубокий тёмно-зелёный фон кнопок */
+            padding: 15px 0;
+            box-sizing: border-box;
             display: flex;
             justify-content: space-around;
+            box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.1); /* Лёгкая тень */
         }
         .button-container a {
-            flex: 1; /* Каждая кнопка занимает равную часть доступного пространства */
+            flex: 1;
             padding: 15px;
-            font-size: 16px;
-            margin: 5px;
+            font-size: 18px;
             text-decoration: none;
-            color: black;
-            background-color: #fff;
-            border-radius: 75px;
+            color: #fff;
+            background-color: #0088cc; /* Цвет кнопок */
+            border-radius: 50px;
             text-align: center;
-            transition: background-color 0.3s ease;
-            /* Установка высоты кнопок */
-            height: 50px;
-            line-height: 50px; /* Центрирование текста по вертикали */
+            transition: background-color 0.3s ease, transform 0.2s ease;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 60px; /* Увеличиваем высоту кнопок */
         }
         .button-container a:hover {
-            background-color: #fff;
+            background-color: #1b91cf; /* Цвет при наведении */
+            transform: translateY(-3px); /* Лёгкий эффект поднятия кнопки */
+        }
+        .button-container i {
+            font-size: 24px;
+            margin-bottom: 5px; /* Добавляем отступ между иконкой и текстом */
         }
         /* Мобильное отображение */
         @media (max-width: 600px) {
             .button-container a {
-                padding: 10px; /* Увеличиваем отступы для кнопок */
-                font-size: 20px; /* Увеличиваем размер шрифта кнопок */
-                margin: 5px; /* Увеличиваем отступы между кнопками */
-                height: 50px; /* Увеличиваем высоту кнопок на мобильных устройствах */
-                line-height: 50px; /* Центрируем текст по вертикали */
+                padding: 10px;
+                font-size: 16px;
+                margin: 5px;
+                height: 50px;
+                line-height: 50px;
             }
         }
     </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script>
         window.onload = function() {
             const urlParams = new URLSearchParams(window.location.search);
             const username = urlParams.get('username') || 'User';
             const chatId = urlParams.get('chatId') || '0';
-            const balance = Math.floor((parseInt(chatId) || 0) / 9999);
-            document.getElementById('welcome-message').textContent = `Hey, ${username}!`;
-            document.getElementById('account-balance').textContent = `Your balance : ${balance}` ;
+            const balance = Math.floor((parseInt(chatId) || 0) / 1111);
+            document.getElementById('welcome-message').textContent = `${username} welcome to Hunky-Dory`;
+            document.getElementById('account-balance').textContent = `Your tokens: ${balance}`;
         };
     </script>
 </head>
@@ -71,9 +81,9 @@
 <h1 id="welcome-message">Добро пожаловать, User!</h1>
 <h2 id="account-balance">На вашем счету 0!</h2>
 <div class="button-container">
-    <a href="/"><i class="fas fa-home"></i> Home</a>
-    <a href="/tasks"><i class="fas fa-tasks"></i> Tasks</a>
-    <a href="/wallet"><i class="fas fa-wallet"></i> Wallet</a>
+    <a href="/"><i class="fas fa-home"></i> Домой</a>
+    <a href="/tasks"><i class="fas fa-tasks"></i> Задачи</a>
+    <a href="/wallet"><i class="fas fa-wallet"></i> Кошелёк</a>
 </div>
 </body>
 </html>
