--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         .button-container {
             margin-top: auto;
             width: 100%;
-            background-color: #ffffff; /* Глубокий тёмно-зелёный фон кнопок */
+            background-color: #0088cc; /*рамка*/
             padding: 15px 0;
             box-sizing: border-box;
             display: flex;
@@ -35,7 +35,7 @@
             padding: 15px;
             font-size: 18px;
             text-decoration: none;
-            color: #fff;
+            color: #ffffff;
             background-color: #0088cc; /* Цвет кнопок */
             border-radius: 50px;
             text-align: center;
