--- a/index.html
+++ b/index.html
@@ -72,14 +72,17 @@
             const username = urlParams.get('username') || 'User';
             const chatId = urlParams.get('chatId') || '0';
             const balance = Math.floor((parseInt(chatId) || 0) / 1111);
-            document.getElementById('welcome-message').textContent = `${username} welcome to Hunky-Dory`;
+            document.getElementById('welcome-message').textContent = `${username}`;
+            document.getElementById('welcome-message').textContent = `Welcome to Hunky-Dory`;
             document.getElementById('account-balance').textContent = `Your tokens: ${balance}`;
         };
     </script>
 </head>
 <body>
+<h2 id="user-name">Username</h2>
 <h1 id="welcome-message">Добро пожаловать, User!</h1>
 <h2 id="account-balance">На вашем счету 0!</h2>
+
 <div class="button-container">
     <a href="/"><i class="fas fa-home"></i> Домой</a>
     <a href="/tasks"><i class="fas fa-tasks"></i> Задачи</a>
