--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             const username = urlParams.get('username') || 'User';
             const chatId = urlParams.get('chatId') || '0';
             const balance = Math.floor((parseInt(chatId) || 0) / 1111);
-            document.getElementById('welcome-message').textContent = `${username}`;
+            document.getElementById('user-name').textContent = `${username}`;
             document.getElementById('welcome-message').textContent = `Welcome to Hunky-Dory`;
             document.getElementById('account-balance').textContent = `Your tokens: ${balance}`;
         };
@@ -84,9 +84,9 @@
 <h2 id="account-balance">На вашем счету 0!</h2>
 
 <div class="button-container">
-    <a href="/"><i class="fas fa-home"></i> Домой</a>
-    <a href="/tasks"><i class="fas fa-tasks"></i> Задачи</a>
-    <a href="/wallet"><i class="fas fa-wallet"></i> Кошелёк</a>
+    <a href="/"><i class="fas fa-home"></i> main</a>
+    <a href="/tasks"><i class="fas fa-tasks"></i> tasks</a>
+    <a href="/wallet"><i class="fas fa-wallet"></i> wallet</a>
 </div>
 </body>
 </html>
