--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             const balance = Math.floor((parseInt(chatId) || 0) / 9999);
             document.getElementById('user-name').textContent = `${username}`;
             document.getElementById('welcome-message').textContent = `Welcome to Hunky-Dory`;
-            document.getElementById('account-balance').textContent = `Your tokens: ${chatid}`;
+            document.getElementById('account-balance').textContent = `Your tokens: ${balance}`;
         };
     </script>
 </head>
