--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <title>Welcome to Hunky-Dory</title>
     <style>
         body {
-            background-color: #0088cc; /* Слегка голубой фон */
+            background-image: url('/pin_hehemonu.jpeg');
+            background-size: cover; /* Изображение растягивается на весь экран */
+            background-position: center; /* Центрирует изображение */
+            background-repeat: no-repeat; /* Изображение не повторяется */
             font-family: 'Roboto', sans-serif;
             color: #333;
             margin: 0;
@@ -18,12 +21,12 @@
         h1, h2 {
             text-align: center;
             margin-top: 5%;
-            color: #ffffff; /* Тёмно-зелёный текст */
+            color: #ffffff; /* Текст белого цвета для контраста с фоном */
         }
         .button-container {
             margin-top: auto;
             width: 100%;
-            background-color: #0088cc; /*рамка*/
+            background-color: rgba(0, 136, 204, 0.8); /* Полупрозрачная рамка */
             padding: 15px 0;
             box-sizing: border-box;
             display: flex;
