--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
     <title>Welcome to Hunky-Dory</title>
     <style>
         body {
-            background-image: url('/pin_hehemonu.jpeg');
-            background-size: cover; /* Изображение растягивается на весь экран */
-            background-position: center; /* Центрирует изображение */
-            background-repeat: no-repeat; /* Изображение не повторяется */
+            background-color: #0088cc; /* Слегка голубой фон */
             font-family: 'Roboto', sans-serif;
             color: #333;
             margin: 0;
@@ -21,12 +18,12 @@
         h1, h2 {
             text-align: center;
             margin-top: 5%;
-            color: #ffffff; /* Текст белого цвета для контраста с фоном */
+            color: #ffffff; /* Тёмно-зелёный текст */
         }
         .button-container {
             margin-top: auto;
             width: 100%;
-            background-color: rgba(0, 136, 204, 0.8); /* Полупрозрачная рамка */
+            background-color: #0088cc; /*рамка*/
             padding: 15px 0;
             box-sizing: border-box;
             display: flex;
