--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Welcome to Hunky-Dory</title>
     <style>
         body {
-            background-color: #0088cc; /* Слегка голубой фон */
+            background: -webkit-linear-gradient(90deg, #408197,#304869,#24132f);
             font-family: 'Roboto', sans-serif;
             color: #333;
             margin: 0;
@@ -23,7 +23,7 @@
         .button-container {
             margin-top: auto;
             width: 100%;
-            background-color: #0088cc; /*рамка*/
+            background: -webkit-linear-gradient(90deg,#000000,#333333); /*рамка*/
             padding: 15px 0;
             box-sizing: border-box;
             display: flex;
@@ -36,7 +36,7 @@
             font-size: 18px;
             text-decoration: none;
             color: #ffffff;
-            background-color: #0088cc; /* Цвет кнопок */
+            background: -webkit-linear-gradient(90deg,#000000,#333333);
             border-radius: 50px;
             text-align: center;
             transition: background-color 0.3s ease, transform 0.2s ease;
@@ -45,6 +45,7 @@
             align-items: center;
             justify-content: center;
             height: 60px; /* Увеличиваем высоту кнопок */
+            -webkit-tap-highlight-color: rgba(0, 0, 0, 0); /* Отключить выделение при нажатии */
         }
         .button-container a:hover {
             background-color: #1b91cf; /* Цвет при наведении */
