--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         .button-container {
             margin-top: auto;
             width: 100%;
-            background: -webkit-linear-gradient(90deg,#000000,#333333); /*рамка*/
+            background: black; /*рамка*/
             padding: 15px 0;
             box-sizing: border-box;
             display: flex;
@@ -36,7 +36,7 @@
             font-size: 18px;
             text-decoration: none;
             color: #ffffff;
-            background: -webkit-linear-gradient(90deg,#000000,#333333);
+            background: black;
             border-radius: 50px;
             text-align: center;
             transition: background-color 0.3s ease, transform 0.2s ease;
@@ -48,7 +48,7 @@
             -webkit-tap-highlight-color: rgba(0, 0, 0, 0); /* Отключить выделение при нажатии */
         }
         .button-container a:hover {
-            background-color: #1b91cf; /* Цвет при наведении */
+            background-color: black; /* Цвет при наведении */
             transform: translateY(-3px); /* Лёгкий эффект поднятия кнопки */
         }
         .button-container i {
