--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <title>Welcome to Hunky-Dory</title>
     <style>
         body {
-            background: -webkit-linear-gradient(90deg, #408197,#304869,#24132f);
+            background-image: url('/backgr.png');
+            background-size: auto; /* Масштабирование изображения по размеру экрана */
+            background-position: center; /* Центрирование изображения */
+            background-repeat: no-repeat; /* Избежать повторения изображения */
             font-family: 'Roboto', sans-serif;
             color: #333;
             margin: 0;
