--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
     <title>Welcome to Hunky-Dory</title>
     <style>
         body {
-            https://raw.githubusercontent.com/Ulan221/Zikr/main/backgr.png
-            background-size: auto; /* Масштабирование изображения по размеру экрана */
-            background-position: center; /* Центрирование изображения */
-            background-repeat: no-repeat; /* Избежать повторения изображения */
+            background: -webkit-linear-gradient(90deg, #408197,#304869,#24132f);
             font-family: 'Roboto', sans-serif;
             color: #333;
             margin: 0;
